erDiagram
    Owner ||--o{ Dog : owns
    Owner ||--o{ Membership : purchases
    Owner ||--o{ Payment : makes
    Membership ||--o{ Payment : for
    Membership ||--o{ Visit : enables
    Dog ||--o{ Visit : has
    Dog ||--o{ VaccinationRecord : has
    Dog ||--o{ BehaviorIncident : involved_in
    Visit ||--o| BehaviorIncident : during
    Dog ||--o{ DogInteraction : participates_as_Dog1
    Dog ||--o{ DogInteraction : participates_as_Dog2
    Visit ||--o{ DogInteraction : during
    InteractionType ||--o{ DogInteraction : categorized_as
    Visit ||--o{ AreaUsage : includes
    ParkArea ||--o{ AreaUsage : tracks

    Owner {
        int OwnerID PK
        string FirstName
        string LastName
        string Email
        string PhoneNumber
        string Address
        string City
        string State
        string ZipCode
        date RegistrationDate
        boolean IsActive
        string EmergencyContact
        string EmergencyPhone
    }

    Dog {
        int DogID PK
        int OwnerID FK
        string Name
        string Breed
        string Size
        date DateOfBirth
        string Gender
        string Color
        text Temperament
        text SpecialNotes
        blob Photo
        string QRCodeID
        boolean IsActive
    }

    Membership {
        int MembershipID PK
        int OwnerID FK
        string MembershipType
        date StartDate
        date EndDate
        boolean IsActive
        decimal Price
        boolean AutoRenew
        date LastRenewalNotice
    }

    Payment {
        int PaymentID PK
        int OwnerID FK
        int MembershipID FK
        date PaymentDate
        decimal Amount
        string PaymentMethod
        string TransactionReference
        boolean IsSuccessful
    }

    Visit {
        int VisitID PK
        int DogID FK
        int MembershipID FK
        datetime CheckInTime
        datetime CheckOutTime
        boolean IsReservation
        datetime ReservationTime
        text Notes
    }

    VaccinationRecord {
        int VaccinationID PK
        int DogID FK
        string VaccinationType
        date AdministrationDate
        date ExpirationDate
        string VetName
        string VetContact
        blob DocumentProof
        boolean IsVerified
    }

    BehaviorIncident {
        int IncidentID PK
        int DogID FK
        int VisitID FK
        datetime IncidentTime
        text Description
        string SeverityLevel
        text StaffAction
        text FollowUpNotes
    }

    DogInteraction {
        int InteractionID PK
        int DogID1 FK
        int DogID2 FK
        int VisitID FK
        int InteractionTypeID FK
        text Notes
    }

    InteractionType {
        int InteractionTypeID PK
        string TypeName
        text Description
        boolean IsPositive
    }

    ParkArea {
        int AreaID PK
        string AreaName
        string DogSizeCategory
        int MaxCapacity
        text Description
        boolean IsActive
    }

    AreaUsage {
        int AreaUsageID PK
        int VisitID FK
        int AreaID FK
        datetime EntryTime
        datetime ExitTime
    }
